samples/deployment-fail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-fail
spec:
  selector:
    matchLabels:
      app: "test"
  replicas: 1
  template:
    metadata:
      labels:
        app: "test"
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: container
          image: >-
            registry.k8s.io/pause:latest
