samples/deployment-no-label.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-no-label
spec:
  selector:
    matchLabels:
      app: "test"
  replicas: 1
  template:
    metadata:
      labels:
        app: "test"
    spec:
      containers:
        - name: container
          image: >-
            registry.k8s.io/pause:latest
