samples/ValidatingAdmissionPolicy.yaml
kind: ValidatingAdmissionPolicy
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: deployments-cant-be-labeled
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE" ]
        resources: [ "deployments" ]
    matchPolicy: Equivalent
  validations:
    - expression: '!("sidecar.istio.io/inject" in object.spec.template.metadata.labels) || (object.spec.template.metadata.labels["sidecar.istio.io/inject"] != "false")'
      message: "The 'sidecar.istio.io/inject' label, must be 'false' for Deployments"
  failurePolicy: Fail
