samples/ValidatingAdmissionPolicyBinding.yaml
kind: ValidatingAdmissionPolicyBinding
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: deployments-cant-be-labeled
spec:
  policyName: deployments-cant-be-labeled
  matchResources:
    namespaceSelector:
      matchLabels:
        vap: "true"
    resourceRules:
      - apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        operations: [ "CREATE", "UPDATE" ]
        resources: [ "deployments" ]
    matchPolicy: Equivalent
  validationActions:
    - Deny
